--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js"
+    "start": "node ccd.js",
+    "dev": "node --watch ccd.js"
   },
   "keywords": [
     "discord",
@@ -20,6 +20,7 @@
     "@anthropic-ai/claude-code": "^1.0.61",
     "@anthropic-ai/sdk": "^0.57.0",
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "express": "^5.1.0"
   }
 }
