--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
   "dependencies": {
     "@anthropic-ai/claude-code": "^1.0.61",
     "@anthropic-ai/sdk": "^0.57.0",
+    "@modelcontextprotocol/sdk": "^1.17.0",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
+    "zod": "^3.25.76"
   }
 }
